download pdl list